@@ -1,5 +1,8 @@
 2006-02-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/tie-formatting-problem.cc (score_configuration): use
+	sliding score for min-length. 
+
 	* Documentation/pictures/GNUmakefile (local-dist): loose the rule
 	spaghetti for icons.
 
